# CXXCTP

./: .clang-format  .dockerignore  .editorconfig  .gitignore  .gitmodules  Acknowledgements.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  CODE_STYLE.md  CONTRIBUTING.md  Codegen_files.cmake  Dependencies.cmake  Dockerfile  LICENSE.md  PULL_REQUEST_TEMPLATE.md  README.md  TODO.md  USAGE.md  Utils.cmake  VERSIONING.md  cmake-format.py  conanfile.py  custom_plugins.cmake.example  run-cmake-format.py
Chromium-Licences/: README.md
cmake/: conan-auto-install.cmake
cmake/exports/: FindCXXCTP_tool.cmake  run_CXXCTP_tool.cmake
cmake/iwyu/: beast-all.imp  boost-all-private.imp  boost-all.imp  cmake_mapping.imp  gcc.stl.headers.imp  gtest.imp  iwyu.imp
cmake/modules/: FindCXTPL_tool.cmake  FindCling.cmake  FindDoubleConversion.cmake  FindFolly.cmake  FindGMock.cmake  FindGflags.cmake  FindLZ4.cmake  FindLibEvent.cmake  FindLibiberty.cmake  FindRang.cmake  Findg3log.cmake  Findlibunwind.cmake  run_CXTPL_tool.cmake
conan/: README.md
conan/profile/: clang.txt  gcc.txt
conan/remotes/: remotes.txt
conan/remotes_disabled_ssl/: remotes.txt
ctp_scripts/: README.md
ctp_scripts/1_utils/: README.md
examples/: CMakeLists.txt  Readme.md
examples/TODO_example_compile_commands/: compile_commands.json
examples/built_in/for_codegen/: example_make_reflect.cpp
examples/simple/: CMakeLists.txt  Readme.md
examples/simple/ctp_scripts/: README.md
examples/simple/ctp_scripts/1_utils/CXTPL_STD/: CXTPL_STD.cpp  CXTPL_STD.hpp
examples/simple/ctp_scripts/1_utils/CXXCTP_STD/: CXXCTP_STD.cpp  CXXCTP_STD.hpp
examples/simple/ctp_scripts/2_scripts/make_interface/: make_interface.cpp  make_interface.hpp
examples/simple/ctp_scripts/2_scripts/make_removefuncbody/: make_removefuncbody.cpp  make_removefuncbody.hpp
examples/simple/ctp_scripts/2_scripts/reflect_enum/: CMakeLists.txt  reflect_enum.cpp  reflect_enum.hpp
examples/simple/ctp_scripts/2_scripts/reflect_enum/cxtpl/: enum_gen_cpp.cxtpl  enum_gen_hpp.cxtpl  enumerated_values.inc.cxtpl
examples/simple/ctp_scripts/2_scripts/typeclass/: CMakeLists.txt  typeclass.cpp  typeclass.hpp
examples/simple/ctp_scripts/2_scripts/typeclass/cxtpl/: typeclass_gen_cpp.cxtpl  typeclass_gen_hpp.cxtpl
examples/simple/ctp_scripts/2_scripts/typeclass_combo/: CMakeLists.txt  typeclass_combo.cpp  typeclass_combo.hpp
examples/simple/ctp_scripts/2_scripts/typeclass_combo/cxtpl/: constructors_tc_combined_t.inc.cxtpl  typeclass_combo_gen_cpp.cxtpl  typeclass_combo_gen_hpp.cxtpl
examples/simple/ctp_scripts/2_scripts/typeclass_combo/cxtpl/old/: typeclass_combined_gen_cpp.cxtpl  typeclass_combined_gen_hpp.cxtpl
examples/simple/ctp_scripts/2_scripts/typeclass_instance/: CMakeLists.txt  typeclass_instance.cpp  typeclass_instance.hpp
examples/simple/ctp_scripts/2_scripts/typeclass_instance/cxtpl/: typeclass_instance_gen_cpp.cxtpl  typeclass_instance_gen_hpp.cxtpl
examples/simple/src/: FireSpell.hpp  MagicItem.hpp  MagicItem_FireSpell.cpp  MagicItem_WaterSpell.cpp  MagicTemplated_FireSpell.cpp  MagicTemplated_WaterSpell.cpp  Printable.hpp  Printable_FireSpell.cpp  Printable_WaterSpell.cpp  Spell.hpp  Spell_FireSpell.cpp  Spell_WaterSpell.cpp  WaterSpell.hpp  main_app.cpp
examples/simple/src/codegen_helpers/: type_erasure_common.hpp
examples/simple/src/for_codegen/: README.md  ReflShapeKind.hpp  cxxctp_macros.hpp  test.cpp  test.hpp  test_typeclass_base1.hpp  test_typeclass_instance1.hpp
examples/simple/src/for_codegen/1_typeclasses/: MagicItem_typeclass.hpp  Printable_typeclass.hpp  Spell_typeclass.hpp
examples/simple/src/for_codegen/2_typeclass_instances/: FireSpell_typeclass_instances.hpp  WaterSpell_typeclass_instances.hpp
examples/simple/src/for_codegen/3_typeclass_combinations/: Spell_MagicItem_typeclass_combo.hpp
examples/src/: main_app.cpp
include/: ClingInterpreterModule.hpp  DispatchQueue.hpp  clangPipeline.hpp  clangUtils.hpp  ctp_registry.hpp  funcParser.hpp  inputThread.hpp  utils.hpp
include/reflect/: ReflTypes.hpp  ReflectAST.hpp  ReflectionCache.hpp  TypeInfo.hpp  ast_utils.hpp
include/template_engine/: CXTPL_AnyDict.hpp  I_Dict.hpp
resources/: ReflShapeKind.hpp  cling_common.hpp  enum_gen_cpp.j2tpl  enum_gen_hpp.j2tpl  index.html  test.cpp  test.hpp  test_typeclass_base1.hpp  test_typeclass_instance1.hpp  typeclass_gen_cpp.j2tpl  typeclass_gen_hpp.j2tpl  typeclass_instance_gen_cpp.j2tpl  typeclass_instance_gen_hpp.j2tpl
resources/TODO/: sad.j2tpl  test2.cpp
resources/ctp_scripts/: 0_CXTPL_STD.cpp  1_CXXCTP_STD.cpp  2_make_interface.cpp  2_make_reflect.cpp  2_make_removefuncbody.cpp  2_reflect_enum.cpp  2_typeclass.cpp  CXTPL_STD.hpp  (+13 more)
scripts/: install_cling.sh  install_cmake.sh  install_libunwind.sh  setup.sh  setup_cling.sh
src/: ClingInterpreterModule.cpp  ClingInterpreterModule.h  ClingInterpreterModule.hpp  DispatchQueue.cpp  DispatchQueue.h  MyTest1H.h  app_loop.cpp  clangPipeline.cpp  clangPipeline.h  clangPipeline.hpp  clangUtils.cpp  clangUtils.h  clangUtils.hpp  ctp_registry.cpp  funcParser.cpp  funcParser.h  funcParser.hpp  inputThread.cpp  inputThread.h  inputThread.hpp  main_app.cpp  main_cling.cpp  someEnum.hpp  type_erasure2.cpp  type_erasure2.hpp  type_erasure_common.hpp  type_erasure_my_interface.cpp  type_erasure_my_interface.hpp  type_erasure_my_interface2.cpp  type_erasure_my_interface2.hpp  type_erasure_my_interface2_externs.hpp  type_erasure_my_interface_externs.hpp  type_erasure_my_interface_my_interface2.cpp  type_erasure_my_interface_my_interface2.hpp  type_erasure_my_interface_my_interface2_externs.hpp  types_for_erasure.cpp  types_for_erasure.hpp  utils.cpp  utils.h
templates/: ctp_registry.cpp.in
tests/: CMakeLists.txt  cxxctp_test.cpp  main.cpp  testsCommon.h
tool/: CMakeLists.txt  Readme.md
tool/includes/: version.hpp.in
tool/plugin_ExtraCmd/: README.md
tool/plugin_ExtraCmd/conf/: ExtraCmd.conf
tool/plugin_ExtraCmd/src/: ExtraCmd.cc
tool/src/: PluginManager.cc  PluginManager.hpp  ServerPlugin.hpp  main_native.cpp
tools/: buildConanThirdparty.cmake  coloredOut.cmake
(+83 files in other folders)
